# BenchmarkAtlas

./: .gitignore  CONTRIBUTING.md  README.md  VISUALIZATION-OVERHAUL.md  pyproject.toml
.github/workflows/: pages.yml  update.yml
data/: milestones.yaml  model_aliases.json
data/bootstrap/: arc_datasets.json  arc_evaluations.json  arc_models.json  arc_providers.json  hle_models.json
pipeline/: __init__.py  analyze.py  charts.py  config.py  export.py  ingest.py  run_pipeline.py  transform.py
site/: app.js  index.html  style.css
site/charts/: confidence-lens.js  efficiency-map.js  labels.js  legend.js  tooltip.js  transfer-gap.js  twin-rivers.js  utils.js
tests/: test_analyze.py  test_ingest.py  test_transform.py
tools/: atlas_cli.py
