[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmark-atlas"
version = "0.1.0"
description = "AGI Gap Atlas data pipeline and static site"
requires-python = ">=3.10"
readme = "README.md"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
